--- a/full_stack/home/templates/content.html
+++ b/full_stack/home/templates/content.html
@@ -1,2 +1,40 @@
 {% load static %}
 
+<div class="card-group mt-5 mx-5" style="gap: 1rem">
+    <div class="card align-items-center rounded">
+      <img src="{% static 'img/cat-6.jpg' %}" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Card title</h5>
+        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+        <p class="card-text"><small class="text-muted">Last updated 3 mins ago..</small></p>
+        <btn class="btn btn-outline-warning rounded float-right float-right">Detail <i class="fas fa-arrow-right"></i></btn>
+      </div>
+    </div>
+    <div class="card align-items-center rounded">
+        <img src="{% static 'img/cat-6.jpg' %}" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Card title</h5>
+          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+          <p class="card-text"><small class="text-muted">Last updated 3 mins ago..</small></p>
+          <btn class="btn btn-outline-warning rounded float-right">Detail <i class="fas fa-arrow-right"></i></btn>
+        </div>
+    </div>
+    <div class="card align-items-center rounded">
+        <img src="{% static 'img/cat-6.jpg' %}" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Card title</h5>
+          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+          <p class="card-text"><small class="text-muted">Last updated 3 mins ago..</small></p>
+          <btn class="btn btn-outline-warning rounded float-right">Detail <i class="fas fa-arrow-right"></i></btn>
+        </div>
+    </div>
+    <div class="card align-items-center rounded">
+        <img src="{% static 'img/cat-6.jpg' %}" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Card title</h5>
+          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+          <p class="card-text"><small class="text-muted">Last updated 3 mins ago..</small></p>
+          <btn class="btn btn-outline-warning rounded float-right">Detail <i class="fas fa-arrow-right"></i></btn>
+        </div>
+    </div>
+  </div>
