--- a/full_stack/home/static/css/main.css
+++ b/full_stack/home/static/css/main.css
@@ -6,15 +6,16 @@
   background: -webkit-linear-gradient(to right, rgba(106, 17, 203, 0.9), rgba(199, 147, 255, 0.9));
 
   /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-  background: linear-gradient(to right, rgba(106, 17, 203, 0.9), rgba(199, 147, 255, 0.9));;
+  background: linear-gradient(to right, rgba(106, 17, 203, 0.9), rgba(199, 147, 255, 0.9));
 }
 
 /* now add CSS code */
 
-body {
+.header {
   background: rgb(106, 17, 203);
   background: -webkit-linear-gradient(to right, rgba(106, 17, 203, 0.9), rgba(199, 147, 255, 0.9));;
   background: linear-gradient(to right, rgba(106, 17, 203, 0.9), rgba(199, 147, 255, 0.9));;
+  height: 40vh;
 }
 
 /* ! NAVBAR RIGHT  */
@@ -223,6 +224,138 @@ div > img {
   max-width: 12rem;
 }
 
+.card-group img {
+  border-radius: .5rem;
+  max-width: 85%;
+}
+
+.card-group .card-body .card-title {
+  color: #fff;
+}
+.card-group .card {
+  border: 1px solid #ffffff22;
+  background-color: #282c34;
+  background: linear-gradient(0deg, rgba(40,44,52,1) 0%, rgba(17,0,32,.5) 100%);
+  box-shadow: 0 7px 20px 5px #00000088;
+  user-select:none;
+  max-width: 300px;
+  backdrop-filter: blur(7px);
+  -webkit-backdrop-filter: blur(7px);
+  overflow: hidden;
+  transition: .5s all;
+    ::before{
+    position: fixed;
+    content: "";
+    box-shadow: 0 0 100px 40px #ffffff08;
+    top: -10%;
+    left: -100%;
+    transform: rotate(-45deg);
+    height: 60rem;
+    transition: .7s all;
+  }
+}
+
+.card-group .card:hover{
+  border: 1px solid #ffffff44;
+  box-shadow: 0 7px 50px 10px #000000aa;
+  transform: scale(1.015);
+  filter: brightness(1.3);
+  ::before{
+    filter: brightness(.5);
+    top: -100%;
+    left: 200%;
+  }
+}
+
+
+
+.card-group{
+  position: relative;
+  bottom: 6rem;
+  display: grid;
+  grid-template-columns: repeat(4,1fr);
+  color: #fff;
+}
 .card-group .card:hover{
   box-shadow: 0px 0px 35px 5px rgba(255, 61, 61, 0.626);
+}
+
+#navbar-text{
+  align-items: center;
+  text-align: center;
+  font-family: 'Quicksand', sans-serif;
+  top: 6rem;
+  position: relative;
+  margin: auto;
+  max-width: 54%;
+}
+
+.header img{
+  transform: rotate(330deg);
+  position: absolute;
+  left: 5rem !important;
+  top: 2rem;
+}
+
+@media (max-width: 992px) {
+  #navbar-text {
+    left: 6rem !important;
+    font-size: 1.5rem;
+  }
+  .header img {
+    max-width: 25% !important;
+    left: 8rem !important;
+  }
+  .card-group{
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+  }
+}
+
+@media (max-width: 918px) {
+  #navbar-text {
+    left: 6rem !important;
+    font-size: 1.5rem;
+  }
+  .header img {
+    max-width: 25% !important;
+    left: 8rem !important;
+  }
+  .card-group{
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+  }
+}
+
+@media (max-width: 768px) {
+  .header {
+    display: flex;
+    flex-direction: column;
+  }
+  .header img {
+    max-width: 30% !important;
+    top: .5rem;
+    left: 2rem !important;
+  }
+  .card-group{
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+  }
+}
+
+@media (max-width: 552px) {
+  #navbar-text {
+    font-size: 1rem;
+    position: absolute;
+    top: 10rem;
+  }
+  .header img {
+    max-width: 30% !important;
+    top: 3.5rem;
+    left: 2rem !important;
+  }
+  .card-group{
+    display: grid;
+    grid-template-columns: repeat(1,1fr);
+  }
 }
