--- a/full_stack/home/templates/content.html
+++ b/full_stack/home/templates/content.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% include 'header.html' %}
 
     <div class="card-group mt-3 mx-5" style="gap: 1rem">
         <div class="card align-items-center rounded my-4">
