--- a/full_stack/user/templates/user_panel.html
+++ b/full_stack/user/templates/user_panel.html
@@ -1,3 +1,4 @@
+{% load active_link_tags %}
 <div class="col-lg-3 mb-5">
     <h2 class="section-title px-5"><span class="px-2">User Profile</span></h2>
     {% with request.resolver_match.url_name as url_name %}
