--- a/full_stack/home/static/css/main.css
+++ b/full_stack/home/static/css/main.css
@@ -379,12 +379,13 @@ div > img {
 	border-radius: 10px;
   	box-shadow: 0 14px 28px rgba(0,0,0,0.25), 
 			0 10px 10px rgba(0,0,0,0.22);
-	position: relative;
-  bottom: 5rem;
-	overflow: hidden;
-	width: 768px;
-	max-width: 100%;
-	min-height: 480px;
+	position: fixed !important;
+  top: 15% !important;
+  left: 25% !important;
+	overflow: hidden !important;
+	width: 768px !important;
+	max-width: 100% !important;
+	max-height: 520px !important;
 }
 
 .form-containerlog {
