--- a/full_stack/home/templates/navbar.html
+++ b/full_stack/home/templates/navbar.html
@@ -1,5 +1,6 @@
 {% load static %}
 
+{% block body %}
 <!-- Navbar -->
 <nav class="navbar navbar-expand-lg bg-light gradient-custom px-5">
     <!-- Container wrapper -->
@@ -49,13 +50,12 @@
                     <a href="#about">Another news</a>
                     <a href="#contact">Something else here</a>
                 </div>
-
             </div>
             <!-- Avatar -->
+            {%  if user.id is not None %}
             <div class="dropdown">
                 <a class="dropbtn d-flex align-items-center hidden-arrow btnnavbar" href="#" onclick="myFunction()" id="navbarDropdownMenuAvatar" role="button" data-mdb-toggle="dropdown" aria-expanded="false">
-                
-                    <img src="https://mdbcdn.b-cdn.net/img/new/avatars/2.webp" class="rounded-circle" height="25" alt="Black and White Portrait of a Man" loading="lazy" />
+                    <img src="{{  profile.image.url }}" class="rounded-circle" height="25" alt="Black and White Portrait of a Man" loading="lazy" />
                 </a>
                 <div id="myDropdown" class="dropdown-content mt-2 rounded">
                     <a href="/user">Profile</a>
@@ -64,9 +64,72 @@
                     <a href="/logout">Log Out</a>
                 </div>
             </div>
+            {% else %}
+            <div class="dropdown">
+                <a class="dropbtn d-flex align-items-center hidden-arrow btnnavbar" href="/login" id="navbarDropdownMenuAvatar" type="button" data-toggle="modal" data-target="#containerlog"><i class="fa-regular fa-user text-dark"></i></a>
+            </div>
+            {% endif %}
         </div>
         <!-- Right elements -->
     </div>
+
     <!-- Container wrapper -->
 </nav>
 <!-- Navbar -->
+<div class="containerlog m-auto modal fade" id="containerlog" tabindex="-1" role="dialog" aria-labelledby="containerlogTitle" aria-hidden="true">
+    <div class="form-containerlog sign-up-containerlog" role="document">
+		<form action="POST">
+			<h1>Create Account</h1>
+			<div class="social-containerlog">
+				<a href="#" class="social"><i class="fab fa-facebook-f"></i></a>
+				<a href="#" class="social"><i class="fab fa-google-plus-g"></i></a>
+				<a href="#" class="social"><i class="fab fa-linkedin-in"></i></a>
+			</div>
+			<span>or use your email for registration</span>
+			<input type="text" placeholder="Name" />
+			<input type="email" placeholder="Email" />
+			<input type="password" placeholder="Password" />
+			<button>Sign Up</button>
+		</form>
+	</div>
+	<div class="form-containerlog sign-in-containerlog">
+        <div id="success">
+            {% if messages %}
+               {% for message in messages %}
+                   <div class="alert alert-{{message.tags}}" role="alert">
+                       {{ message }}
+                   </div>
+               {% endfor %}
+           {% endif %}
+        </div>
+		<form action"login" method="POST">
+            {% csrf_token %}
+			<h1>Sign in</h1>
+			<div class="social-containerlog">
+				<a href="#" class="social"><i class="fab fa-facebook-f"></i></a>
+				<a href="#" class="social"><i class="fab fa-google-plus-g"></i></a>
+				<a href="#" class="social"><i class="fab fa-linkedin-in"></i></a>
+			</div>
+			<span>or use your account</span>
+			<input type="text" name="username" placeholder="Username"/>
+			<input type="password" name="password" placeholder="Password"/>
+			<a href="#">Forgot your password?</a>
+			<button type="submit">Sign In</button>
+		</form>
+	</div>
+	<div class="overlay-containerlog">
+		<div class="overlay">
+			<div class="overlay-panel overlay-left">
+				<h1>Welcome Back!</h1>
+				<p>To keep connected with us please login with your personal info</p>
+				<button class="ghost" id="signIn">Sign In</button>
+			</div>
+			<div class="overlay-panel overlay-right">
+				<h1>Hello, Friend!</h1>
+				<p>Enter your personal details and start journey with us</p>
+				<button class="ghost" id="signUp">Sign Up</button>
+			</div>
+		</div>
+	</div>
+</div>
+{% endblock %}
