--- a/full_stack/home/templates/index.html
+++ b/full_stack/home/templates/index.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% load static %}
-{% block title %} {{ setting.title }}{% endblock %}
+{% block title %} {{ page }}{% endblock %}
 {% block description %} {{ setting.description }} {% endblock %}
 {% block keywords %} {{ setting.keywords }} {% endblock %}
 {% block body %} {% include 'content.html' %}  {% endblock %}
