User pages added
user_settings
user_profile
user_posts..

--- a/full_stack/home/templates/content.html
+++ b/full_stack/home/templates/content.html
@@ -1,7 +1,7 @@
 {% load static %}
 {% include 'header.html' %}
 
-    <div class="card-group mt-3 mx-5" style="gap: 1rem">
+    <div class="card-group mt-3 mx-5" style="gap: 1rem;">
         <div class="card align-items-center rounded my-4">
           <img src="{% static 'img/cat-6.jpg' %}" class="card-img-top py-4" alt="...">
           <div class="card-body">
