add post feature added.
user_posts
user_newpost

--- a/full_stack/home/templates/navbar.html
+++ b/full_stack/home/templates/navbar.html
@@ -59,7 +59,7 @@
                 </a>
                 <div id="myDropdown" class="dropdown-content mt-2 rounded">
                     <a href="/user">Profile</a>
-                    <a href="/user/posts">My Posts</a>
+                    <a href="/user/post">My Posts</a>
                     <a href="/user/settings">Settings</a>
                     <a href="/logout">Log Out</a>
                 </div>
