--- a/full_stack/user/templates/user_posts.html
+++ b/full_stack/user/templates/user_posts.html
@@ -11,7 +11,36 @@
         </div>
     </div>
 </header>
+<div class="text-center mt-4">
+    <a href="/user/newpost" class="btn btn-primary px-5 py-3 text-light"> ADD </a>
+</div>
 <!-- Header -->
 
+{% if messages%}
+    {% for message in messages %}
+        <div class="alert alert-{{message.tags}} w-50 my-4 shadow-lg m-auto" role="alert">
+            {{ message }}
+        </div>
+    {% endfor %}
+{% endif %}
+
+<div class="container">
+    {% for post in posts %}
+        <div class="media mb-4">
+            {% if post.image %}
+            <img src="{{ post.image.url }}" alt="Image" class="img-fluid mr-3 mt-1" style="width: 45px;">
+            {% else %}
+            <img src="{% static 'img/cat-6.jpg' %}" alt="Image" class="img-fluid mr-3 mt-1" style="width: 45px;">
+            {% endif %}
+            
+            <div class="media-body">
+                <h5>{{ post.content }}</h5>
+                <div class="py-3">
+                    <p>{{ post.user.get_full_name }} <small> - <i>{{ post.create_at }}</i></small></p>
+                </div>
+            </div>
+        </div>
+    {% endfor %}
+</div>
 
 {% endblock %}
