--- a/full_stack/home/templates/content.html
+++ b/full_stack/home/templates/content.html
@@ -1,32 +1,29 @@
 {% load static %}
 {% include 'header.html' %}
 
-    <div class="card-group mt-3 mx-5" style="gap: 1rem;">
-      {% for post in posts %}
-        <div class="card align-items-center rounded my-4">
-          {% if post.image %}
-          <img src="{{ post.image.url }}" class="card-img-top py-4 w-75" alt="...">
-          {% else %}
-          <img src="{% static 'img/cat-6.jpg' %}" class="card-img-top py-4 w-75" alt="...">
-          {% endif %}
-          <div class="card-body w-100">
-            <h5 class="card-title">{{ post.user.get_full_name }}</h5>
-            <p class="card-text">{{ post.title }}</p>
-            <p class="card-text"><small class="text-muted">{{ post.create_at }}</small></p>
-          </div>
-          <div class="text-right w-100 p-2">
-            <btn class="btn btn-outline-warning rounded">Detail..</btn>
-          </div>
-        </div>
-        {% endfor %}
-        <div class="card align-items-center rounded my-4">
-            <img src="{% static 'img/cat-6.jpg' %}" class="card-img-top py-4" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-              <p class="card-text"><small class="text-muted">Last updated 3 mins ago..</small></p>
-              <btn class="btn btn-outline-warning rounded float-right">Detail..</btn>
-            </div>
-        </div>
+{% block body %}
+<div class="card-group mt-3 mx-5" style="gap: 1rem;">
+  {% for post in posts %}
+    <div class="card align-items-center rounded my-4">
+      {% if post.image %}
+      <img src="{{ post.image.url }}" class="card-img-top py-4 w-75" alt="...">
+      {% else %}
+      <img src="{% static 'img/cat-6.jpg' %}" class="card-img-top py-4 w-75" alt="...">
+      {% endif %}
+      <div class="card-body w-100">
+        <h5 class="card-title">{{ post.user.get_full_name }}</h5>
+        <p class="card-text">{{ post.title }}</p>
+        <p class="card-text"><small class="text-muted">{{ post.create_at }}</small></p>
+      </div>
+      <div class="text-right w-100 p-2">
+        <a class="btn btn-outline-warning rounded align-items-center hidden-arrow" href="/post_detail/{{post.id}}" value="{{post.id}}" id="navbarDropdownMenuAvatar" type="button" data-toggle="modal" data-target="#containerdetail">Detail..</a>
 
+        <a class="btn btn-outline-warning rounded align-items-center hidden-arrow" href="/post_detail/{{post.id}}">DETAIL..</a>
+      </div>
     </div>
+  {% endfor %}
+</div>
+
+{% comment %} {% include "post_detail.html" %} {% endcomment %}
+
+{% endblock %}
