--- a/full_stack/home/templates/navbar.html
+++ b/full_stack/home/templates/navbar.html
@@ -81,13 +81,13 @@
 
 {% if messages and user.id is not None %}
     {% for message in messages %}
-        <div class="alert alert-{{message.tags}}" role="alert" style="position:absloute; float: right;">
+        <div class="alert alert-{{message.tags}} rounded shadow-lg m-auto float-right" role="alert" style="position:unset;">
             {{ message }}
         </div>
     {% endfor %}
     {% else %}
     {% for message in messages %}
-    <div class="alert alert-{{message.tags}}" role="alert" style="position:absloute; float: right;">
+    <div class="alert alert-{{message.tags}} rounded shadow-lg" role="alert" style="position:unset;">
         {{ message }}
     </div>
     {% endfor %}
