--- a/full_stack/home/templates/navbar.html
+++ b/full_stack/home/templates/navbar.html
@@ -60,6 +60,7 @@
                 <div id="myDropdown" class="dropdown-content mt-2 rounded">
                     <a href="/user">Profile</a>
                     <a href="/user/post">My Posts</a>
+                    <a href="/user/comments">My Comments</a>
                     <a href="/user/settings">Settings</a>
                     <a href="/logout">Log Out</a>
                 </div>
