--- a/full_stack/user/templates/user_settings.html
+++ b/full_stack/user/templates/user_settings.html
@@ -13,5 +13,24 @@
 </header>
 <!-- Header -->
 
+<!-- Update Start -->
+<div class="container-fluid pt-5">
+    <div class="row px-xl-5">
+        <div class="col-lg-12 table-responsive m-auto">
+           <form method="POST" enctype = "multipart/form-data">
+                {% csrf_token %}
+                <fieldset class="form-group">
+                    {{ user_form.as_p  }}
+                    <p>--------------------------------------------------------</p>
+                    {{ profile_form.as_p  }}
+                </fieldset>
+                <div class="form-group">
+                    <button class="btn btn-outline-success rounded py-2" type="submit">Update</button>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
+<!-- Update End -->
 
 {% endblock %}
