Comment, reply comment and post status fixed.
STATUS = (('New', 'New'),('True', 'True'),('False', 'False'))
status = models.CharField(max_length=5, choices=STATUS, default='New')
comments = Comment.objects.filter(post_id=id, status='True')
        repcomments = ReplyComment.objects.filter(comment_id=id, status='True')
posts = Post.objects.filter(status='True')

--- a/full_stack/user/templates/user_posts.html
+++ b/full_stack/user/templates/user_posts.html
@@ -28,10 +28,12 @@
         <div class="card-body w-100">
           <div class="d-flex flex-row-reverse justify-content-between">
             <p class="card-text p-2 rounded 
-                {% if post.status == True %}
+                {% if post.status == 'True' %}
                 bg-success
-                {% else %}
+                {% elif post.status == 'False' %}
                 bg-danger
+                {% else %}
+                bg-warning
                 {% endif %}">
                 {{ post.status }}
             </p>
