--- a/full_stack/home/static/css/main.css
+++ b/full_stack/home/static/css/main.css
@@ -385,7 +385,7 @@ div > img {
 	overflow: hidden;
 	width: 768px;
 	max-width: 100%;
-	max-height: 520px;
+	/* max-height: 520px; */
 }
 
 .form-containerlog {
