--- a/full_stack/home/templates/post_detail.html
+++ b/full_stack/home/templates/post_detail.html
@@ -38,12 +38,15 @@
 <div class="containerlog m-auto px-4 py-3" style="margin-top: 1rem !important;" >
     <div class="media-body">
             <h6 class="text-muted"><i>{{ comment.create_at }}</i></h6>
-        <div class="media-body d-flex flex-column align-items-center">
-            <img src="{{ comment.user.userprofile.image.url }}" alt="Image" class="mr-3 mt-1 rounded-circle mb-3" style="width:60px;">
-            <h4>{{ comment.user.get_full_name }}</h4>
-            
-            <p>{{ comment.comment }}</p>
-            <div class="media-text">
+        <div class="media-body">
+            <div class="body-img d-flex">
+                <img src="{{ comment.user.userprofile.image.url }}" alt="Image" class="mr-3 mt-1 rounded-circle mb-3" style="width:55px; height: 80px;">
+                <div class="body-text" style="display: flex !important; justify-content: space-around; flex-direction: column !important;">
+                    <h4>{{ comment.user.get_full_name }}</h4>
+                    <p>{{ comment.comment }}</p>
+                </div>
+            </div>
+            <div class="media-text" style="display: flex !important; flex-direction: row-reverse;">
                 <a type="text" data-toggle="collapse" data-target="#reply{{comment.id}}" class="btn btn-success rounded shadow-sm " href="">Reply</a><br>
             </div>
             <div id="reply{{comment.id}}" class="collapse in w-100">
@@ -65,12 +68,11 @@
         </div>
         <hr>
         {% for repcomment in comment.replycomment_set.all %}
-            <div class="media bg-light mt-4 p-4 rounded">
-                <img src="{{ repcomment.user.userprofile.image.url }}" alt="Image" class="mr-3 mt-1 rounded-circle" style="width:60px;">
-                <div class="media-body">
-                    <h4>{{ repcomment.user.get_full_name }} <small> - <i>{{ repcomment.create_at }}</i></small></h4>
+            <div class="media bg-light my-4 px-4 rounded">
+                    <img src="{{ repcomment.user.userprofile.image.url }}" alt="Image" class="mr-3 mt-1 rounded-circle" style="width:55px; height: 80px;">
+                <div class="media-body border-bottom" style="display: flex; flex-direction: column;">
+                    <h4 class= "h5">{{ repcomment.user.get_full_name }} <small><i class="text-muted"> - {{ repcomment.create_at }}</i></small></h4>
                     <p>{{ repcomment.repcomment }}</p>
-                <hr>
                 </div>
             </div>
         {% endfor %}
